@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/passlib
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/passlib/ChangeLog,v 1.9 2014/03/31 20:29:28 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/passlib/ChangeLog,v 1.10 2014/05/12 15:45:15 idella4 Exp $
+
+  12 May 2014; Ian Delaney <idella4@gentoo.org> passlib-1.6.2.ebuild:
+  drop py2.6 pypy2_0 add py3.4 support
 
   31 Mar 2014; Michał Górny <mgorny@gentoo.org> passlib-1.6.1-r1.ebuild,
   passlib-1.6.2.ebuild:
